# x402-demo

./: .env.sample  Dockerfile  FACILITATOR.md  README.md  install_deps.sh  requirements.txt  start.sh
a2a/: .env.example  README.md  pyproject.toml  start_demo.sh
a2a/client_agent/: __init__.py  agent.py  client.py  client_agent.py  remote.py  task_store.py  wallet.py
a2a/server/: __main__.py  executor.py  merchant.py  parts.py  payment.py
a2a/server/agents/: adk_merchant_agent.py  x402_merchant_executor.py
client/python/: main.py
client/terminal/: main.py
client/typescript/: package-lock.json  package.json
client/typescript/scripts/: install-sdk.sh
client/typescript/src/: main.ts
client/web/src/: App.tsx
client/web/src/components/: PaymentCard.tsx  PaymentDemo.tsx
client/web/src/pages/: Home.tsx  Protected.tsx
facilitator/: main.py
server/: main.py
